--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src --out-dir build",
-    "start": "node build/index.js",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel src --out-dir build",
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/index.js",
     "dev": "nodemon src/index.js --exec babel-node"
   },
   "keywords": [],
