--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf build && mkdir build",
-    "build-babel": "babel src --out-dir build",
+    "build-babel": "babel src --out-dir ./build",
     "build": "npm run clean && npm run build-babel",
     "start": "npm run build && node ./build/index.js",
     "dev": "nodemon src/index.js --exec babel-node"
