--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel src --out-dir build",
     "build": "npm run clean && npm run build-babel",
-    "start": "node index.js",
+    "heroku-postbuild": "npm run build",
+    "start": "node build/index.js",
     "dev": "nodemon src/index.js --exec babel-node"
   },
   "keywords": [],
