--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
-    "store2": "^2.12.0"
-  },
-  "devDependencies": {
+    "store2": "^2.12.0",
     "@babel/cli": "^7.13.10",
     "@babel/core": "^7.13.10",
     "@babel/node": "^7.13.10",
     "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-env": "^7.13.10"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
